tests/explicit_inexact/explicit_inexact.exp
Error ------------------------------------------------------------------------------------------------------ test.js:8:2

Cannot cast `x` to object type because inexact `U` [1] is incompatible with exact object type [2].

   test.js:8:2
   8| (x: {||}); // Error, inexact vs. exact
       ^

References:
   test.js:5:16
   5| declare var x: U;
                     ^ [1]
   test.js:8:5
   8| (x: {||}); // Error, inexact vs. exact
          ^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:8:2

Cannot cast `x` to object type because property `foo` is missing in object type [1] but exists in `U` [2].

   test.js:8:2
   8| (x: {||}); // Error, inexact vs. exact
       ^

References:
   test.js:8:5
   8| (x: {||}); // Error, inexact vs. exact
          ^^^^ [1]
   test.js:5:16
   5| declare var x: U;
                     ^ [2]



Found 2 errors
